edit dimensions populates shapes when click on, shift feature is working. The radius slider is functional but it is not updating state correctly yet

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,6 @@ canvas{
   border: solid 1px black;
 }
 
-.editDimensions{
-  border: solid 1px black;
+.card{
+  margin-bottom: 5px;
 }
